; ModuleID = '/home/carl/AnghaBench/Cinder/src/freetype/psaux/extr_pshints.c_cf2_getWindingMomentum.c'
source_filename = "/home/carl/AnghaBench/Cinder/src/freetype/psaux/extr_pshints.c_cf2_getWindingMomentum.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32, i32)* @cf2_getWindingMomentum to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cf2_getWindingMomentum(i32 %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %5, align 4
  %10 = ashr i32 %9, 16
  %11 = load i32, i32* %8, align 4
  %12 = load i32, i32* %6, align 4
  %13 = call i32 @SUB_INT32(i32 %11, i32 %12)
  %14 = ashr i32 %13, 16
  %15 = mul nsw i32 %10, %14
  %16 = load i32, i32* %6, align 4
  %17 = ashr i32 %16, 16
  %18 = load i32, i32* %7, align 4
  %19 = load i32, i32* %5, align 4
  %20 = call i32 @SUB_INT32(i32 %18, i32 %19)
  %21 = ashr i32 %20, 16
  %22 = mul nsw i32 %17, %21
  %23 = sub nsw i32 %15, %22
  ret i32 %23
}

declare dso_local i32 @SUB_INT32(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
